--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL="mongodb+srv://madeiraapc:gTEJQxCMEwWtT35m@netflix-clone.7mppf4e.mongodb.net/netflix"
-
-D
+NEXTAUTH_JWT_SECRET="NEXT_AUTH_JWT_SECRET"
+NEXTAUTH_SECRET="NEXT-AUTH-SECRET"
