Fully Implemented Authentication

--- a/.env
+++ b/.env
@@ -2,4 +2,10 @@ DATABASE_URL="mongodb+srv://madeiraapc:gTEJQxCMEwWtT35m@netflix-clone.7mppf4e.mo
 NEXTAUTH_JWT_SECRET="NEXT_AUTH_JWT_SECRET"
 NEXTAUTH_SECRET="NEXT-AUTH-SECRET"
 
+GITHUB_ID=dc96bab70f4691a03842
+GITHUB_SECRET=784e03a90c364e4abe0cb4bb5cb4cff2972638ed
+
+GOOGLE_CLIENT_ID=916048475529-dkn5e8b0jtse74mvvmllm55h99apbkhl.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
 
