--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "vercel-build": "next build && prisma generate"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
